--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
     ],
     "require": {
         "civicrm/civicrm-asset-plugin": "^1.1",
+        "civicrm/civicrm-core": "^5.32",
+        "civicrm/civicrm-drupal-8": "^5.32",
+        "civicrm/civicrm-packages": "^5.32",
         "composer/installers": "^1.9",
         "drupal/core-composer-scaffold": "^9.1",
         "drupal/core-project-message": "^9.1",
