--- a/.lando.yml
+++ b/.lando.yml
@@ -2,3 +2,16 @@ name: matthandus-civicrm
 recipe: drupal9
 config:
   webroot: web
+services:
+  node:
+    type: node
+    globals:
+      gulp: latest
+tooling:
+  # Front-end tooling
+  npm:
+    service: node
+  node:
+    service: node
+  gulp:
+    service: node
