--- a/web/themes/custom/civics/civics.info.yml
+++ b/web/themes/custom/civics/civics.info.yml
@@ -1,7 +1,7 @@
 name: USWDS-gulp Subtheme
 type: theme
 description: 'A subtheme of USWDS using USWDS-gulp.'
-core: 8.x
+core_version_requirement: ^8.7.7 || ^9
 base theme: uswds
 
 # The following overrides will work if css is compiled to the root, update if different.
@@ -9,13 +9,13 @@ libraries-override:
   uswds/uswds:
     css:
       theme:
-        assets/css/uswds.css: css/styles.css
+        assets/css/uswds.css: assets/css/styles.css
     js:
       assets/js/uswds.min.js: assets/js/uswds.min.js
 
 # Add the CSS to CKEditor, so that custom entries in "Style" will work.
 ckeditor_stylesheets:
-  - css/styles.css
+  - assets/css/styles.css
 
 regions:
   header_top: 'Above Header'
