--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,18 @@
         "civicrm/civicrm-drupal-8": "^5.32",
         "civicrm/civicrm-packages": "^5.32",
         "composer/installers": "^1.9",
+        "drupal/admin_toolbar": "^2.4",
+        "drupal/antibot": "^1.4",
         "drupal/core-composer-scaffold": "^9.1",
         "drupal/core-project-message": "^9.1",
         "drupal/core-recommended": "^9.1",
+        "drupal/domain": "^1.0@beta",
+        "drupal/eu_cookie_compliance": "^1.14",
+        "drupal/metatag": "^1.15",
+        "drupal/pathauto": "^1.8",
+        "drupal/podcast": "^1.1",
+        "drupal/seckit": "^2.0",
+        "drupal/svg_image": "^1.14",
         "drupal/uswds": "^2.0"
     },
     "conflict": {
