--- a/.lando.yml
+++ b/.lando.yml
@@ -3,6 +3,9 @@ recipe: drupal9
 config:
   webroot: web
 services:
+  appserver:
+    build:
+      - composer install
   node:
     type: node
     globals:
@@ -15,3 +18,8 @@ tooling:
     service: node
   gulp:
     service: node
+  # Back-end tooling
+  drush:
+    service: appserver
+    env:
+      DRUSH_OPTIONS_URI: "https://matthandus-civicrm.lndo.site"
