--- a/composer.json
+++ b/composer.json
@@ -98,7 +98,8 @@
                 "      composer remove drupal/core-project-message"
             ]
         },
-        "enable-patching": "true"
+        "enable-patching": "true",
+        "compile-whitelist": ["civicrm/civicrm-core", "civicrm/composer-compile-lib"]
     },
     "scripts": {
         "pre-install-cmd": "git config --global core.autocrlf true"
