--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,9 @@
         "drupal/podcast": "^1.1",
         "drupal/seckit": "^2.0",
         "drupal/svg_image": "^1.14",
-        "drupal/uswds": "^2.0"
+        "drupal/uswds": "^2.0",
+        "drupal/webform": "^6.0",
+        "drupal/webform_civicrm": "^5.0@beta"
     },
     "conflict": {
         "drupal/drupal": "*"
