--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "drupal/core-project-message": "^9.1",
         "drupal/core-recommended": "^9.1",
         "drupal/domain": "^1.0@beta",
+        "drupal/domain_path": "^1.0@beta",
         "drupal/eu_cookie_compliance": "^1.14",
         "drupal/metatag": "^1.15",
         "drupal/pathauto": "^1.8",
