--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ web/.editorconfig
 web/.eslintignore
 web/.eslintrc.json
 web/.gitattributes
-web/.htaccess
+# web/.htaccess
 web/.ht.router.php
 web/autoload.php
 web/index.php
