--- a/.lando.yml
+++ b/.lando.yml
@@ -2,6 +2,9 @@ name: matthandus-civicrm
 recipe: drupal9
 config:
   webroot: web
+  xdebug: debug
+  config:
+    php: .vscode/php.ini
 services:
   appserver:
     build:
