--- a/.lando.yml
+++ b/.lando.yml
@@ -31,3 +31,8 @@ tooling:
     service: appserver
     env:
       DRUSH_OPTIONS_URI: "https://matthandus-civicrm.lndo.site"
+  phpunit:
+    service: appserver
+    user: www-data
+    cmd:
+      - appserver: php /app/web/vendor/bin/phpunit -c /app/phpunit.xml
