--- a/.lando.yml
+++ b/.lando.yml
@@ -58,7 +58,7 @@ tooling:
     service: appserver
     user: www-data
     cmd:
-      - appserver: php /app/web/vendor/bin/phpunit -c /app/phpunit.xml
+      - appserver: php /app/vendor/bin/phpunit -c /app/phpunit.xml
   nightwatch:
     service: appserver
     description: Run Nightwatch.js
