--- a/.lando.yml
+++ b/.lando.yml
@@ -15,26 +15,31 @@ proxy:
 services:
   appserver:
     build_as_root:
-      - curl -fsSL https://deb.nodesource.com/setup_17.x | bash -
+      - pecl install uploadprogress
+      - docker-php-ext-enable uploadprogress
+      - curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
       - apt-get install -y nodejs
-      - npm install --global yarn gulp
+      - npm install --global yarn gulp@^4.0.2
     build:
       - composer install
-    run:
-      - drush --root=/app/web si --db-url=mysql://drupal9:drupal9@database/drupal9 -y $1
-      - cv core:install --cms-base-url="https://matthandus-civicrm.lndo.site/" --db=mysql://drupal9:drupal9@database/drupal9
-      - drush theme:enable civics
-      - drush config:set system.theme default civics -y
-      - drush pm:enable civicrm -y
-      - mkdir -p private/browsertest_output
+      - drush --root=/app/web sql-drop -y
+      - npm install -y
       - yarn install --non-interactive --cwd /app/web/core
+      - drush --root=/app/web si --db-url=mysql://drupal9:drupal9@database/drupal9 -y
+      - cv core:install -f --cms-base-url="https://matthandus-civicrm.lndo.site/" --db=mysql://drupal9:drupal9@database/drupal9
+      - drush --root=/app/web theme:enable civics
+      - drush --root=/app/web config:set system.theme default civics -y
+      - gulp init
+    run:
+      - gulp watch
     overrides:
       environment:
+        DRUSH_OPTIONS_URI: "https://matthandus-civicrm.lndo.site"
         SIMPLETEST_BASE_URL: "https://matthandus-civicrm.lndo.site/"
         SIMPLETEST_DB: "sqlite://localhost/tmp/db.sqlite"
         BROWSERTEST_OUTPUT_DIRECTORY: '/app/web/sites/simpletest/browser_output'
         BROWSERTEST_OUTPUT_BASE_URL: 'https://matthandus-civicrm.lndo.site'
-        MINK_DRIVER_ARGS_WEBDRIVER: '["chrome", {"browserName":"chrome","chromeOptions":{"args":["--disable-gpu","--headless", "--no-sandbox"]}}, "http://chrome:9515"]'
+        MINK_DRIVER_ARGS_WEBDRIVER: '["chrome", {"browserName":"chrome","chromeOptions":{"args":["--ignore-certificate-errors", "--disable-gpu", "--headless", "--no-sandbox"]}}, "http://chrome:9515"]'
         # Nightwatch
         DRUPAL_TEST_BASE_URL: "https://matthandus-civicrm.lndo.site/"
         DRUPAL_TEST_DB_URL: 'mysql://drupal9:drupal9@database:3306/drupal9'
@@ -54,6 +59,10 @@ services:
     type: mailhog
     hogfrom:
       - appserver
+events:
+  pre-start:
+    - mkdir -p private/browsertest_output
+    - touch private/xdebug.log
 tooling:
   # Front-end tooling
   npm:
@@ -67,8 +76,6 @@ tooling:
   # Back-end tooling
   drush:
     service: appserver
-    env:
-      DRUSH_OPTIONS_URI: "https://matthandus-civicrm.lndo.site"
   phpunit:
     service: appserver
     user: www-data
@@ -80,3 +87,14 @@ tooling:
     cmd:
       - appserver: yarn test:nightwatch
     dir: /app/web/core
+  # PHP Codesniffer
+  phpcs:
+    service: appserver
+    cmd: "/app/vendor/bin/phpcs --standard=Drupal,DrupalPractice"
+  phpcbf:
+    service: appserver
+    cmd: "/app/vendor/bin/phpcbf --standard=Drupal,DrupalPractice"
+  # Twig Codesniffer
+  twigcs:
+    service: appserver
+    cmd: "/app/vendor/friendsoftwig/twigcs"
